# colcon_gephi

./: README.md  pyproject.toml  requirements.txt  setup.cfg
colcon_gephi/: __init__.py
colcon_gephi/verb/: gephi_graph.py
